--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
     <div class="bottom">
  
 
-        <div class="credit"> created <span>foolishdeveloper.com</span> | all rights reserved! </div>
+        <div class="credit"> created <span>Utkarsh Saraswat</span> | all rights reserved! </div>
         
     </div>
 
